# ur-analytic-ik

./: .gitignore  CMakeLists.txt  LICENSE  README.md  environment.yaml  pyproject.toml  setup.py
.github/workflows/: pip.yml  wheels.yml
notebooks/: api.ipynb  compare_to_real_robot.ipynb  debug_edge_case.ipynb  example.ipynb  inverse_kinematics.ipynb  ur5e_poses.txt
src/: CMakeLists.txt  main  main.cpp
src/ur_analytic_ik/: __init__.py  dh_parameters.hh  forward_kinematics.hh  inverse_kinematics.hh  ur_analytic_ik_ext.cpp  utils.h
tests/: test_basic.py  test_data_formats.py  test_forward_kinematics.py  test_inverse_kinematics.py  test_non_contiguous_numpy.py  test_solutions_match_real_robot.py
tests/data/: ur5e_poses.txt
ur_analytic_ik/: __init__.py  dh_parameters.hh  forward_kinematics.hh  inverse_kinematics.hh  ur_analytic_ik_ext.cpp
