[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "scikit-build-core >= 0.4.3",
    "cmake>=3.18",
    "nanobind>=1.3.2",
    "ninja; platform_system!='Windows'",
]

build-backend = "scikit_build_core.build"

[project]
name = "ur_analytic_ik"
version = "0.0.8"
description = "C++ implementation with Python bindings of analytic forward and inverse kinematics for the Universal Robots."
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["numpy"]
authors = [
    { name = "Victor-Louis De Gusseme", email = "victorlouisdg@gmail.com" },
]
classifiers = ["License :: OSI Approved :: MIT License"]
keywords = ["robotics", "kinematics", "universal-robots"]

[project.urls]
Homepage = "https://github.com/Victorlouisdg/ur-analytic-ik"
Issues = "https://github.com/Victorlouisdg/ur-analytic-ik/issues"


[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "0.4"

# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"

# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"

[tool.cibuildwheel]
# Necessary to see build output from the actual compilation
build-verbosity = 1


# Needed for full C++17 support
[tool.cibuildwheel.macos.environment]
MACOSX_DEPLOYMENT_TARGET = "10.14"
